cabal-version:       2.2

name:                crocus
version:             0.0.0.0
synopsis:            a datalog embedded as a Haskell DSL
description:         a datalog embedded as a Haskell DSL using fused-effects
homepage:            https://github.com/robrix/crocus
bug-reports:         https://github.com/robrix/crocus/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2020 Rob Rix
category:            Language

library
  exposed-modules:     Crocus
  build-depends:
    , base ^>= 4.14.1
  hs-source-dirs:      src
  default-language:    Haskell2010
